Bug 424859 - Ctrl+R may not assigned to both Replace and Reload function
Summary: Ctrl+R may not assigned to both Replace and Reload function
Status: RESOLVED FIXED
Alias: None
Product: kid3
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.8.x
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Urs Fleisch
URL:
Keywords:
: 428981 429213 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-07-31 13:25 UTC by mikunofu
Modified: 2020-11-16 20:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the error message (10.18 KB, image/png)
2020-07-31 13:25 UTC, mikunofu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mikunofu 2020-07-31 13:25:31 UTC
Created attachment 130535 [details]
Screenshot of the error message

SUMMARY


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 mikunofu 2020-07-31 13:28:18 UTC
to reproduce just open the kid3 from the menu, i am on gnome destop with linux 5
Comment 2 Urs Fleisch 2020-07-31 14:14:33 UTC
If you are on Gnome, you probably should rather use the kid3-qt package, which does not use KDE libraries. This message comes from within some internal KDE library. If you still want to use the KDE version `kid3` and not `kid3-qt`, you can get rid of the notification by deleting or reassigning the shortcut. See also an earlier answer to the same problem: https://invent.kde.org/multimedia/kid3/-/issues/495.
Comment 3 mikunofu 2020-08-23 08:34:42 UTC
Urs Fleisch you are right, thank you. Then I am wondering if  "K" on KID3 stand specific for KDE then ID 3 refer to MP3 tags.
Comment 4 Urs Fleisch 2020-08-23 18:08:53 UTC
You are right, the K is for "KDE" and the rest for "ID3". For a bit of Kid3 history, see

- https://sourceforge.net/blog/psst-hey-kid3-want-a-great-music-file-tagger/
- https://showroom.qt.io/kid3/
Comment 5 Urs Fleisch 2020-09-04 11:08:04 UTC
Git commit 4865491925d9f0f82ec9c73b0e18dbfefaeef0d6 by Urs Fleisch.
Committed on 04/09/2020 at 11:06.
Pushed by ufleisch into branch 'master'.

Use F5 instead of QKeySequence::Refresh to avoid conflict on GNOME

Issue #495
Related: bug 426163

M  +6    -1    src/app/kde/kdemainwindow.cpp

https://invent.kde.org/multimedia/kid3/commit/4865491925d9f0f82ec9c73b0e18dbfefaeef0d6
Comment 6 Urs Fleisch 2020-11-11 19:14:25 UTC
*** Bug 428981 has been marked as a duplicate of this bug. ***
Comment 7 Urs Fleisch 2020-11-16 20:29:03 UTC
*** Bug 429213 has been marked as a duplicate of this bug. ***