Use F5 instead of QKeySequence::Refresh to avoid conflict on GNOME

Issue #495
BUG: 424859
BUG: 426163